Got integration test to work. Minor changes to the Versioning controller.
